[package]
name = "watchhn"
license = "MIT"
version = "0.1.0"
authors = ["monokh <mnokhb@gmail.com>"]
edition = "2018"
description = "Watch hackernews for new comments and keywords"
readme = "README.md"
homepage = "https://github.com/monokh/watchhn"
repository = "https://github.com/monokh/watchhn"
keywords = ["hackernews", "cli", "watch", "comments", "keywords"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0.114", features = ["derive"] }
async-recursion = "0.3.1"
clap = "2.33.1"
regex = "1"
